# xnnpack_test

./: .gitignore  .gitmodules  CMakeLists.txt
Includes/cpp-oss-template/: Test.hpp
Sources/cpp-oss-template/: CMakeLists.txt  Test.cpp
Tests/UnitTests/: SimpleTest.cpp
